# synthesist

./: .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  AGENTS.md  BUILD-LINUX-ARM64.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION-GAPS.md  MIGRATION-v2-to-v3.md  MIGRATION.md  Makefile  README.md  SYNC.md  agent-shape.toml  clippy.toml  deny.toml  go.mod  go.sum  opencode.json  renovate.json  rustfmt.toml
.agent/: skills
.claude/: rune.toml
.claude/skills/release/: SKILL.md  release.sh
.cross/: linux-arm64-build.md
.cursor/: synthesist-skill.mdc
.cursor/skills/synthesist-perf-experiments/: SKILL.md
.cursor/synthesist/: SKILL.md
.opencode/agents/: review.md  verify.md
.synth/synthesist/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
agent-shape-reports/: baseline-v5.1.0-n5.checkpoint.jsonl  baseline-v5.1.0-n5.json  baseline-v5.1.0-n5.md  baseline-v5.1.0-n5.rejudged.checkpoint.jsonl  baseline-v5.1.0-n5.rejudged.json  baseline-v5.1.0-n5.rejudged.md  compare-corrected-vs-treated-rejudged.md  compare-corrected-vs-treated.md  treated-v0-n5.checkpoint.jsonl  treated-v0-n5.json  treated-v0-n5.md  treated-v0-n5.rejudged.checkpoint.jsonl  treated-v0-n5.rejudged.json  treated-v0-n5.rejudged.md
benches/: README.md  store.rs
claim/: .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IDENTITY.md  Makefile  README.md  SYNC.md  deny.toml
claim/docs/: jsonld-form.md
claim/src/: asserter.rs  claim.rs  gamma.rs  heads.rs  jsonld.rs  lib.rs  log.rs  ontology.rs  prov.rs  store.rs
claim/tests/: fixtures_v2_estates.rs  gamma.rs  storage.rs
claim/tests/fixtures/v2_estates/: export_v2_5_2.json  legacy_asserters_export.json
claim/tests/fixtures/v2_estates/compacted/claims/: config.toml  genesis.amc  snapshot.amc
claim/tests/fixtures/v2_estates/with_changes/claims/: genesis.amc
claims/: genesis.amc
cmd/synth/: cmd_landscape.go  cmd_retro.go  cmd_status.go  cmd_task.go  main.go  skill.go
cmd/synthesist/: README.md  cli_types.go  cli_types_landscape.go  cli_types_task.go  cmd_archive.go  cmd_campaign.go  cmd_direction.go  cmd_discovery.go  cmd_disposition.go  cmd_export.go  cmd_import.go  cmd_init.go  cmd_landscape.go  cmd_landscape_show.go  cmd_migrate.go  cmd_pattern.go  cmd_phase.go  cmd_propagation.go  cmd_replay.go  cmd_retro.go  cmd_retro_create.go  cmd_scaffold.go  cmd_session.go  cmd_signal.go  cmd_skill_gen.go  cmd_spec.go  cmd_stakeholder.go  cmd_stance.go  cmd_status.go  cmd_task.go  cmd_task_create.go  cmd_task_helpers.go  cmd_task_lifecycle.go  cmd_task_list.go  cmd_task_query.go  cmd_thread.go  cmd_tree.go  cmd_version.go  errors.go  golden_test.go  (+2 more)
cmd/synthesist/testdata/: spec_create.golden  status.golden  task_create.golden  tree_list.golden
docs/: agent-perf-lanes.md  architecture-v1.md  claim-compaction-copy-paste.md  claim-compaction-git.md  cursor.md  embed.go  jig-scenarios.md  jsonld-form.md  perf-baseline.md  perf-hot-paths.md  perf-options-matrix.md  perf-recommendation.md  state-machine.md  surface-manifests.md
docs/proposals/: 001-holdout-sessions.md  002-graph-substrate.md  002-implementation-plan.md
examples/: verify_storr_v3.rs
internal/store/: README.md  store.go  store_session.go  store_test.go
internal/types/: README.md  types.go
jig/scenarios/: _template.toml  execute-a-task.toml  plan-a-spec.toml  triage-pending.toml
ontology/: base.shacl.ttl  base.ttl  synth.shacl.ttl  synthesist.shacl.ttl
prompts/: framework.md  instance.md  plan.md
scripts/: agent-shape-fixture.sh  bench-baseline.sh  build-multiplatform.sh  check-symlinks.sh  claims-compact-trial.sh  git-worktree-perf.sh
specs/: SPEC_FORMAT.md  estate.json
specs/_example/: state.json
specs/_example-tree/: archive.json  campaign.json  patterns.json  stakeholders.json
specs/_example-tree/example-feature/: spec.md  state.json
specs/_template/: landscape.json  patterns.json  spec.md  stakeholders.json  state.json
src/: beacon_client.rs  claim.rs  claim_compact.rs  claim_type.rs  cli.rs  cmd_campaign.rs  cmd_claims.rs  cmd_conflicts.rs  cmd_discovery.rs  cmd_export.rs  cmd_import.rs  cmd_init.rs  cmd_jig.rs  cmd_landscape.rs  cmd_migrate.rs  cmd_outcome.rs  cmd_overlay.rs  cmd_phase.rs  cmd_query.rs  cmd_serve.rs  cmd_session.rs  cmd_spec.rs  cmd_sql.rs  cmd_surface.rs  cmd_task.rs  cmd_tree.rs  compaction.rs  crypto.rs  error.rs  gamma.rs  graph_view.rs  heads.rs  integrity.rs  jsonld.rs  lib.rs  log.rs  main.rs  ontology.rs  output.rs  schema.rs  (+10 more)
src/migrations/: 0001_initial.sql  mod.rs  runner.rs  schema.rs  v2_to_v3.rs
src/overlay/: demo.rs  mod.rs  plan_at_risk.rs
src/schema/: campaign.rs  discovery.rs  mod.rs  outcome.rs  phase.rs  session.rs  spec.rs  task.rs  tree.rs
src/surface/: manifest.rs  mod.rs  resolve.rs
surface/: baseline-v25.toml  composite-commands.toml  overlay-first-class.toml  pruned.toml  sparql-exposed.toml
tests/: beacon_client_roundtrip.rs  cli_append_list.rs  cli_smoke.rs  close_disambiguation.rs  crypto_props.rs  crypto_roundtrip.rs  data_dir_flag.rs  integration.rs  manifests.rs  migrate_v1_roundtrip.rs  migrations.rs  migrations_real_estate.rs  overlay_e2e.rs  path_traversal_security.rs  plan_at_risk_e2e.rs  query.rs  schema_matrix.rs  session_roundtrip.rs  shacl_emitter.rs  smoke.rs  storage.rs  store_basic.rs  store_compact.rs  store_merge.rs  store_props.rs  surface_dispatch.rs  v2_4_cohesive.rs  v3_integration.rs  view_basic.rs  view_idempotent_dedup.rs  view_props.rs  view_sync.rs  wave4_campaign_roundtrip.rs  wave4_discovery_roundtrip.rs  wave4_landscape_moved.rs
tests/golden/: golden_test.go
tests/golden/testdata/: check.golden  migrate.golden  phase_show.golden  scaffold.golden  scaffold_skip.golden  session_list.golden  spec_create.golden  status.golden  task_list.golden  tree_create.golden
tools/: MIGRATION.md  lint-specs.py  migrate-v5-to-v1.py
tools/migrate-v1-to-v2/: Cargo.toml
tools/migrate-v1-to-v2/src/: lib.rs  main.rs
