[package]
name = "nomograph-synthesist"
version = "2.0.0"
edition = "2024"
description = "Specification graph manager"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/synthesist"
homepage = "https://gitlab.com/nomograph/synthesist"
keywords = ["specification", "task", "dag", "agent"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["*.png", "*.svg", "hero.*", "avatar.*"]
license = "MIT"
rust-version = "1.88"

[[bin]]
name = "synthesist"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
nomograph-claim = { path = "../claim" }
nomograph-workflow = { path = "../workflow" }

[features]
# Legacy SQL-backed commands not yet ported to the claim substrate.
# Wave 4 ports them in M2 (session/phase/init/status/check/export/sql)
# and M3 (discovery/campaign/landscape). Gate defaults to off so the
# M1-owned modules (store, schema, cmd_tree, cmd_spec, cmd_task) can be
# built + tested independently. M5 removes this feature.
default = []
legacy-sql = []

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
