[package]
name = "nomograph-claim"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Bi-temporal CRDT claim substrate with asserter attribution. Backbone of nomograph multi-user, multi-agent tooling."
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/claim"
homepage = "https://gitlab.com/nomograph/claim"
readme = "README.md"
keywords = ["crdt", "bi-temporal", "claim", "substrate", "multi-agent"]
categories = ["data-structures", "database-implementations"]
exclude = [
    "target/*",
    "claims/*",
    ".synth/*",
    ".lock",
    "*.swp",
    "claim",
    "dist/*",
    "Cargo.lock.bak",
]

[lib]
name = "nomograph_claim"
path = "src/lib.rs"

[[bin]]
name = "claim"
path = "src/bin/claim.rs"

[dependencies]
automerge = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# v3-alpha graph view stack. JSON-LD parsing + RocksDB-backed
# triple store + SPARQL query engine. Heavy dep cloud accepted
# for alpha thesis validation; gamma replaces with a custom triple
# index sized to measured demand.
oxigraph = "0.4"
oxjsonld = "0.1"
oxrdf = "0.2"
oxttl = "0.1"

# E2EE
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Config + paths
directories = "5"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Process-level advisory lock on the claims/ directory, used to
# serialize compact() against concurrent append() in the same repo.
fs4 = { version = "0.13", default-features = false, features = ["sync"] }

# Beacon client (optional). Enabled with --features beacon. When off,
# claim stays async-free for single-host CLI workloads.
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
    "sync",
], optional = true }
tokio-tungstenite = { version = "0.23", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
], optional = true }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
], optional = true }
base64 = { version = "0.22", optional = true }
url = { version = "2", optional = true }
http = { version = "1", optional = true }

[features]
default = []
beacon = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:base64",
    "dep:url",
    "dep:http",
]

[dev-dependencies]
tempfile = "3"
proptest = "1"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
