[workspace]
# Monorepo root. The synthesist crate lives at the repo root (this same
# [package] below); the claim substrate is vendored under claim/ with full
# git history (subtree merge). Cargo builds from here as the sole workspace
# root for both crates.
members = ["claim"]

# [profile.release] hoisted to the workspace root. Member-level profiles are
# ignored by cargo (with a warning) once a crate is part of a workspace, so
# the equivalent settings that previously lived in claim/Cargo.toml are
# declared here for the whole workspace.
[profile.release]
opt-level = 3
lto = "thin"

[package]
name = "nomograph-synthesist"
version = "3.0.0-rc.3"
edition = "2024"
rust-version = "1.88"
description = "Specification graph manager"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/synthesist"
homepage = "https://gitlab.com/nomograph/synthesist"
keywords = ["specification", "task", "dag", "agent"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    "target/*",
    "claims/*",
    ".synth/*",
    ".lock",
    "*.swp",
    "*.png",
    "*.svg",
    "hero.*",
    "avatar.*",
    "/synthesist",
    "dist/*",
    "tools/*",
    "docs/*",
    "MIGRATION.md",
    # Development-time files; downstream Rust consumers don't need them.
    "agent-shape.toml",         # jig rubric for our own CI; useless to crates.io consumers
    "agent-shape-reports/*",    # jig run outputs (1.2 MB of regression baselines)
    "scripts/*",                # CI helpers (check-symlinks.sh, future additions)
    ".agent/*",                 # AGENTS.md ecosystem compat dir; regenerated by Makefile
]
license = "MIT"

[[bin]]
name = "synthesist"
path = "src/main.rs"

[[bin]]
name = "emit-shacl"
path = "src/bin/emit_shacl.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "1.0"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
nomograph-claim = { path = "claim", version = "3.0.0-rc.3" }
# spargebra parses SPARQL into an AST; telemetry.rs uses it to derive a
# stable query_hash from overlay query strings. Retained after the
# Oxigraph removal because it is a standalone parser crate.
spargebra = "0.4"
# blake3 is the substrate's standard hash; used by telemetry canonicalize()
# for query_hash derivation. Pin to 1.x for stability.
blake3 = "1"
# migrations: tarball backup of the v2 store before migration.
flate2 = "1"
tar = "0.4"

[features]
default = []

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
oxttl = "0.2"
